--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
 			<li>Cursive: Brush Script MT, Lucida Handwriting</li>
 			<li>Fantasy: Copperplate, Papyrus</li>
 			</ul>
-			Other ways to insert font: <a href="#font"> google font and downloaded font</a>
+			Other ways to insert font: <a href="index.html#font"> google font and downloaded font</a>
 			</td>
 		  <td>font-family: Monospace;</td>
 		 </tr>
